<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textViewPostDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/post_detail_post_detail"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:text="@string/post_detail_delete_button_caption"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/post_detail_follow_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:text="@string/follow_button"
                style="?android:attr/buttonBarButtonStyle" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageViewPost"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/loading"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textViewMainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_main_content"
            android:textSize="14sp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/textViewLikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_likes"
            android:textSize="14sp"
            android:paddingBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_detail_author_button_caption"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_detail_like_button_caption"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_detail_comment_button_caption"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>