<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitorPageAvtivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/avatar_profile_cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="100dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/avatar_visit_page"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/avatar"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/user_name_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/user_name_caption" />

                        <Button
                            android:id="@+id/visit_page_follow_button_id"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="follow" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/user_gender_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_gender_caption" />

                    <TextView
                        android:id="@+id/user_birthdate_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/user_birthdate_caption" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <!-- Section for Following Count -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="start">
                    <Button
                        android:id="@+id/user_following_count_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followings"
                        style="?android:attr/buttonBarButtonStyle" />
                    <TextView
                        android:id="@+id/user_following_count_text_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </LinearLayout>

                <!-- Section for Follower Count -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="start">
                    <Button
                        android:id="@+id/user_follower_count_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        style="?android:attr/buttonBarButtonStyle" />
                    <TextView
                        android:id="@+id/user_follower_count_text_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </LinearLayout>

                <!-- Section for Post Count -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="16dp"
                    android:gravity="start">
                    <Button
                        android:id="@+id/user_post_count_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        style="?android:attr/buttonBarButtonStyle" />
                    <TextView
                        android:id="@+id/user_post_count_text_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                android:id="@+id/last_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:background="#cccccc"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/achievement_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:padding="16dp"
                android:weightSum="1"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/novice"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/novice"
                        android:visibility="gone"
                        app:srcCompat="@drawable/novice_achievement" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/explorer"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/explorer_achievement"
                        android:contentDescription="@string/novice" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/master"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/master_achievement"
                        android:contentDescription="@string/novice" />
                </RelativeLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>